--- a/last-version/index.html
+++ b/last-version/index.html
@@ -14,7 +14,7 @@
 	<title>Acadia Design and Consultants  - Plan - Design - Build</title><!-- Styles -->
 	<link href="css/style.css" media="screen" rel="stylesheet">
 </head>
-<body class="home" onload="ownpreloader()">
+<body class="home" onload="ownpreloader()" style="background-color: white">
 	<div id="preloader"><img src="images/sticked-logo.png"></div>
 	<div class="animsition">
 		<!-- <div class="wrapper boxed"> -->
@@ -34,13 +34,13 @@
 					<a class="mob-show" href="tel:6474787282"><i class="fa fa-phone"></i> (647) 478-7282</a>
 				</div>
 			</div> -->
+			<a id="ring" href="tel:6474787282" style><i class="fa fa-phone"></i></a>
 			<header class="navbar boxed js-navbar">
 				<div id="top-line">
-
-					<a class="mob-show" href="tel:6474787282"><i class="fa fa-phone"></i> (647) 478-7282</a>
+					<a class="mob-show" href="tel:6474787282" style>Call now <i class="fa fa-phone"></i></a>
 				</div>
 
-				<button aria-expanded="false" class="navbar-toggle hidden-lg-up" data-target="#navbar-collapse" data-toggle="collapse" type="button"><span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span></button> <a class="brand" href="index.html"><img alt="AcadiaDC" class="logo" src="images/logo.png"></a> <a class="brand sticked-brand" href="index.html" style="display:none;"><img alt="AcadiaDC" class="logo" src="images/sticked-logo.png"></a>
+				<button aria-expanded="false" class="navbar-toggle hidden-lg-up" data-target="#navbar-collapse" data-toggle="collapse" type="button" style="padding-top: 5px"><span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span></button> <a class="brand" href="index.html"><img alt="AcadiaDC" class="logo" src="images/logo.png"></a> <a class="brand sticked-brand" href="index.html" style="display:none;"><img alt="AcadiaDC" class="logo" src="images/sticked-logo.png"></a>
 				<nav class="main-menu hidden-sm hidden-xs">
 					<ul>
 						<li><a class="active" href="index.html">Home</a></li>
@@ -97,7 +97,7 @@
 							<div class="button bg"><span>Get a free expert consultation</span></div>
 						</div>
 						<div class="col-xs-12 col-md-7 col-md-pull-5 consult">
-							<div class="otstup"><span class="section-title section-about-title">Providing hight quality solutions for cannabis growers</span></div>
+							<div class="otstup"><span class="section-title section-about-title">Providing high quality solutions for cannabis growers</span></div>
 						</div>
 					</div>
 
@@ -194,15 +194,17 @@
 							<div class="col-md-12 center">
 								<h2>About Us</h2>
 							</div>
-							<div class="container">
+
+<!-- container -->
+
 								<div class="col-md-4 col-md-push-8 pl_centered2">
-									<div class="imgbaner"><img class="img-responsive" src="images/about/about1.jpg"></div>
+									<div class="imgbaner make_bigger"><img class="img-responsive" src="images/about/about1.jpg"></div>
 								</div>
 								<div class="col-md-8 col-md-pull-4">
-									<p class="textabout">Acadia designs & builds custom indoor/outdoor marijuana grow facilities that utilize all of the opportunities efficiently in the available environment. 
+									<p class="textabout make_bigger">Acadia designs & builds custom indoor/outdoor marijuana grow facilities that utilize all of the opportunities efficiently in the available environment. 
 									We are currently working on several projects and help future producers prosper.</p>
 								</div>
-							</div>
+								<!-- container/ -->
 							<div class="col-md-4 pl_centered2">
 								<div class="imgbaner"><img class="img-responsive" src="images/about/about2.jpg"></div>
 							</div>
@@ -236,8 +238,8 @@
 					</div>
 					<div class="container">
 						<div class="col-md-3 teamoffset"><img class="img-responsive centered iconab" src="images/icons/icon6.png"><p class="descicon2">Architects & designers </p></div>
-						<div class="col-md-3"><img class="img-responsive centered iconab" src="images/icons/icon7.png"><p class="descicon2">Specialized contractors</p></div>
-						<div class="col-md-3"><img class="img-responsive centered iconab" src="images/icons/icon8.png"><p class="descicon2">Expert consultants</p></div>
+						<div class="col-md-3 spaces"><img class="img-responsive centered iconab" src="images/icons/icon7.png"><p class="descicon2">Specialized contractors</p></div>
+						<div class="col-md-3"><img class="img-responsive centered iconab" src="images/icons/icon8.png"><p class="descicon2 low">Expert consultants</p></div>
 					</div>
 					<div class="container">
 						<div class="col-md-3 col-md-offset-3"><img class="img-responsive centered iconab" src="images/icons/icon9.png"><p class="descicon2">Engineers</p></div>
@@ -260,7 +262,7 @@
 									production business.
 								</p>
 							</div>
-							<div class="col-md-12 center h3s">
+							<div class="col-md-12 center h3s space_after">
 								<span>Our approach and technologies:</span>
 							</div>
 							<div class="col-xs-12 col-sm-12 col-md-6 infoblock2">
@@ -278,7 +280,7 @@
 
 					</div>
 				</section>
-				<hr class="hr">
+
 				<section id="sectionstep" class="bg-dots">
 
 					<div class="container">
@@ -287,7 +289,7 @@
 
 							<div class="col-md-12">
 
-								<div class="nextstep"><span>What is the next step? Get in touch with us and we would be glad to help. 
+								<div class="nextstep top_line"><span>What is the next step? Get in touch with us and we would be glad to help. 
 									We offer to build you a facility that you actually need – the one 
 								that maximizes income</span></div>
 
@@ -308,22 +310,21 @@
 						<div class="container">
 							<div class="col-md-4"><p class="textabout">Acadia creates compliant designs and is 
 								guaranteeing the quality of services provided.
-								Our works are up to the <b>Ontario Building Code (OBC)</b>  and we are ready to incorporate unique 
-							requirements for your projects in our works.</p>
+								Our works are up to the <b>Ontario Building Code (OBC)</b>  and we are ready to incorporate your unique requirements.</p>
 						</div>
-						<div class="col-xs-3 col-md-2"><img class="logos" src="images/logos/logo1.png" 
+						<div class="col-xs-3 col-md-2 upper"><img class="logos logos-min-1" src="images/logos/logo1.png" 
 							onmouseover="this.src='images/logos/logo1h.png';" 
 							onmouseout="this.src='images/logos/logo1.png';" />
 						</div>
-						<div class="col-xs-3 col-md-2"><img class="logos" src="images/logos/logo2.png" 
+						<div class="col-xs-3 col-md-2 upper"><img class="logos logos-min-2" src="images/logos/logo2.png" 
 							onmouseover="this.src='images/logos/logo2h.png';" 
 							onmouseout="this.src='images/logos/logo2.png';" />
 						</div>
-						<div class="col-xs-3 col-md-2"><img class="logos" src="images/logos/logo3.png" 
+						<div class="col-xs-3 col-md-2 upper"><img class="logos" src="images/logos/logo3.png" 
 							onmouseover="this.src='images/logos/logo3h.png';" 
 							onmouseout="this.src='images/logos/logo3.png';" />
 						</div>
-						<div class="col-xs-3 col-md-2"><img class="logos" src="images/logos/logo4.png" 
+						<div class="col-xs-3 col-md-2 upper"><img class="logos" src="images/logos/logo4.png" 
 							onmouseover="this.src='images/logos/logo4h.png';" 
 							onmouseout="this.src='images/logos/logo4.png';" />
 						</div>
