--- a/last-version/index.html
+++ b/last-version/index.html
@@ -94,7 +94,7 @@
 
 					<div class="container">
 						<div class="col-xs-12 col-md-5 col-md-push-7">
-							<div class="button bg"><span>Get a free expert consultation</span></div>
+							<a href="http://www.acadiadc.ca/contact/" class="button bg" style="display: block; color: white; text-decoration: none"><span>Get a free expert consultation</span></a>
 						</div>
 						<div class="col-xs-12 col-md-7 col-md-pull-5 consult">
 							<div class="otstup"><span class="section-title section-about-title">Providing high quality solutions for cannabis growers</span></div>
@@ -298,7 +298,7 @@
 								<div class="Shape3"></div>
 								<p class="textabout2">Our mission is to create solutions from which our customers will benefit the most!<br><br>Let’s make it happen !</p>
 							</div>
-							<div class="col-md-5"><div class="button2"><div class="bg2"><span>Contact us to get<br>a free consultation</span></div></div></div>
+							<div class="col-md-5"><div class="button2"><a href="http://www.acadiadc.ca/contact/" class="bg2" style="display: block; color: white; font-weight: 500"><span>Contact us to get<br>a free consultation</span></a></div></div>
 
 
 
